tests/good/syntax/084-string-in-block-comment.clap
val x = 42
(* val x = " *) " *)
