tests/bad/syntax/048-unterminated-nested-comment.clap
val x = 42 (* (* foobar *)
